# sambada

./: .gitignore  .travis.yml  AUTHORS  Archiviste.cpp  Archiviste.h  CHANGELOG  CMakeLists.txt  Chronometre.cpp  Chronometre.h  Duree.cpp  Duree.h  Erreur.cpp  Erreur.h  FluxSortie.cpp  FluxSortie.h  Journal.cpp  Journal.h  JournalTemporaire.cpp  JournalTemporaire.h  Makefile  Makefile.am  ModeleParametres.txt  README  RegressionLogistique-calc.cpp  RegressionLogistique-io.cpp  RegressionLogistique.h  SplineStorey - copie.cpp  SplineStorey-interpolation.cpp  SplineStorey.cpp  Supervision.cpp  Supervision.h  TestChronometre.cpp  TestDuree.cpp  TestJournal.cpp  TestStorey-qvaleurs.cpp  TestStorey.cpp  Toolbox.cpp  Toolbox.h  appveyor.yml  configure.ac  (+9 more)
.github/workflows/: build.yml  verification.yml
.github/workflows/scripts/: search-release.js  upload-artefact.js
Data/: 1222G-118ENV-102M-colsup-ptVirgules-Out-0.csv  1222G-118ENV-102M-colsup-ptVirgules-Out-1.csv  1222G-118ENV-102M-colsup-ptVirgules-log.csv  1222G-118ENV-102M-colsup-ptVirgules.csv  1222G-118ENV-102M-entete-colsup-espaces.txt  1222G-118ENV-102M-numColonnes.csv  1222G-118ENV-102M-original-sans-entete.csv  Example_parameters_input_matrix.txt  input_matrix-Out-0.csv  input_matrix-Out-1.csv  parameter-118-102.txt  testPlink.ped
Data/Split/: Example_parameters_a.txt  Example_parameters_b.txt  input_matrix-env.csv  input_matrix-mark-0-0-Out-0.csv  input_matrix-mark-0-0-Out-1.csv  input_matrix-mark-0-0.csv  input_matrix-mark-1-40-Out-0.csv  input_matrix-mark-1-40-Out-1.csv  input_matrix-mark-1-40.csv  input_matrix-mark-2-80-Out-0.csv  input_matrix-mark-2-80-Out-1.csv  input_matrix-mark-2-80.csv  input_matrix-res-0.csv  input_matrix-res-1.csv  input_matrix.csv  parameters-split.txt
Sambada-untracked.xcodeproj/: Sylvie.mode1v3  Sylvie.pbxuser  project.pbxproj
Sambada.xcodeproj/: Sylvie.mode1v3  Sylvie.mode2v3  Sylvie.pbxuser  Sylvie.perspectivev3  project.pbxproj
ScytheSAM.xcodeproj/: Sylvie.mode1v3  Sylvie.pbxuser  project.pbxproj
examples/: Makefile.mk
examples/DataFromManual/OneDataFile/: param-combo-a.txt  param-combo.txt  param-split-combo.txt
examples/DataFromManual/TwoDataFiles/: param-a.txt
examples/SubsetCattleSNP/: paramTest.txt
examples/analysis-with-population-structure/: ReadMe.txt  cattle-pop-env-first.csv  cattle-pop-env-last.csv  param-pop-first.txt  param-pop-last.txt
examples/data-from-manual/one-data-file/: combo-data.txt  param-combo-b.txt
examples/data-from-manual/two-data-files/: env-data.txt  mol-data.txt  param-b.txt  param-split.txt  param.txt
examples/random-data/: param-sample100.txt  sample100.txt
examples/subset-cattle-SNP/: cattle-env.csv  cattle-mark.txt
ext/scythestat-1.0.3/: AUTHORS  LICENSE  Makefile.in  README  acinclude.m4
ext/scythestat-1.0.3/scythestat/: Makefile.in  distributions.h  matrix.h
manual/: .gitignore  Makefile.mk  basictex-osx.sh  latexmkrc_template  manual-v0.5.2.tex  manual.bib  manual.tex  no_manual_template  publish-manual.sh  texlive-ubuntu.profile  texlive-ubuntu.sh
scripts/: Makefile.mk  bonferroniModelSelection.R
scripts-ci/: Dockerfile.cpp-env-ubuntu  analysis-gcov.sh  travis-after-script.sh  travis-before-script.sh  travis-build.sh  travis-gcov.sh
scythestat-1.0.3/: ChangeLog  INSTALL  Makefile.am  aminclude.am  configure  configure.ac
scythestat-1.0.3/scythestat/: Makefile.am  distributions.h  ide.h
scythestat-1.0.3/scythestat/rng/: Makefile.in
src/: Archiviste.cpp  Archiviste.h  Archiviste.hpp  Chronometre.cpp  Chronometre.h  Chronometre.hpp  Duree.cpp  Duree.h  Duree.hpp  Erreur.cpp  Erreur.h  Erreur.hpp  FluxSortie.cpp  FluxSortie.h  FluxSortie.hpp  Journal.cpp  Journal.h  Journal.hpp  JournalTemporaire.cpp  JournalTemporaire.h  JournalTemporaire.hpp  LecteurCheminAcces.cpp  LecteurCheminAcces.h  LecteurCheminAcces.hpp  Makefile.mk  RegressionLogistique-as.cpp  RegressionLogistique-bienvenue.cpp  RegressionLogistique-calc.cpp  RegressionLogistique-io.cpp  RegressionLogistique.h  RegressionLogistique.hpp  Supervision.cpp  Supervision.h  Supervision.hpp  Toolbox.cpp  Toolbox.h  Toolbox.hpp  mainSambada.cpp  mainSambada_shared.cpp  mainSupervision.cpp  (+3 more)
src/common/: Makefile.mk  Matrices.hpp  Probability.cpp  Probability.hpp  TypesCommuns.hpp
src/common/maths/: Makefile.mk  Matrices.hpp  Probability.cpp  Probability.hpp
src/common/segmentation/: Makefile.mk  Tokenizer.cpp  Tokenizer.hpp
src/histograms/: GroupHistograms.cpp  GroupHistograms.hpp  Histogram.cpp  Histogram.hpp  Makefile.mk  StoreyHistograms.cpp  StoreyHistograms.hpp  StoreyHistogramsStreamWriter.cpp  StoreyHistogramsStreamWriter.hpp
src/modeles/: Makefile.mk  Modele.cpp  Modele.hpp
src/modeles/calibration/: Makefile.mk  PreparateurRegressionLogistique.cpp  PreparateurRegressionLogistique.hpp  RegresseurLogistique.cpp  RegresseurLogistique.hpp  TableauNoir.cpp  TableauNoir.hpp
src/modeles/scriptorium/: Archiviste.cpp  Archiviste.hpp  FlotSortieChaineFactory.cpp  FlotSortieChaineFactory.hpp  FlotSortieFactory.hpp  FlotSortieFichierFactory.cpp  FlotSortieFichierFactory.hpp  Makefile.mk  Scribe.cpp  Scribe.hpp
src/parametres/: LecteurParametres.cpp  LecteurParametres.hpp  Makefile.mk  Parametres.cpp  Parametres.hpp
src/variables/: CombinaisonVariables.cpp  CombinaisonVariables.hpp  EtiquetteCombinaisonVariables.cpp  EtiquetteCombinaisonVariables.hpp  FamilleVariablesFactory.cpp  FamilleVariablesFactory.hpp  Makefile.mk  SpecificationsVariables.cpp  SpecificationsVariables.hpp  TypesCommuns.hpp
test/: Makefile.mk
test/integration/: Makefile.mk
test/integration/recodePlink/: Makefile.mk
test/manual/: TestChronometre.cpp  TestDuree.cpp  TestJournal.cpp
test/unit/: Makefile.mk
test/utils/: Makefile.mk  SambadaInputData.cpp  SambadaInputData.hpp  SambadaRegressionResults.cpp  SambadaRegressionResults.h  SambadaRegressionResults.hpp  SambadaSpatialAutocorrelationResults.cpp  SambadaSpatialAutocorrelationResults.h  SambadaStoreyHistogram.cpp  SambadaStoreyHistogram.h  SambadaStoreyHistogramMapper.cpp  SambadaStoreyHistogramMapper.hpp
(+575 files in other folders)
